--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "pda/pheanstalk": "~3.0",
         "aws/aws-sdk-php": "~2.7",
         "chrisboulton/php-resque": "~1.2",
-        "react/promise": "~2.2"
+        "react/promise": "~2.2",
+        "zikarsky/react-gearman": "0.1.*"
     },
     "require-dev": {
         "satooshi/php-coveralls": "^0.6",
