--- a/composer.json
+++ b/composer.json
@@ -14,15 +14,18 @@
         "pda/pheanstalk": "~3.0",
         "aws/aws-sdk-php": "~2.7",
         "chrisboulton/php-resque": "~1.2",
-        "react/promise": "~2.2",
+        "react/promise": "^2.2",
         "zikarsky/react-gearman": "0.1.*",
-        "jms/metadata": "~1.5"
+        "jms/metadata": "~1.5",
+        "react/stomp": "dev-master",
+        "clue/redis-react": "^0.5.1"
     },
     "require-dev": {
         "satooshi/php-coveralls": "^0.6",
         "phpunit/phpunit": "~4.0",
         "vectorface/dunit": "~2.0",
-        "squizlabs/php_codesniffer": "~1.0"
+        "squizlabs/php_codesniffer": "~1.0",
+        "rskuipers/php-assumptions": "^0.3.0"
     },
     "autoload": {
         "psr-4": {
