--- a/.travis.yml
+++ b/.travis.yml
@@ -1,21 +1,50 @@
 language: php
 sudo: false
-cache: composer
 
+## Cache composer bits
+cache:
+  directories:
+    - vendor
+    - $HOME/.composer/cache
+
+## PHP versions we test against
 php:
   - 5.5
   - 5.6
+  - 7
   - hhvm
-  - hhvm-nightly
 
+## Build matrix for lowest and highest possible targets
 matrix:
-  allow_failures:
-    - php: hhvm-nightly
+  include:
+    - php: 5.5
+      env: dependencies=lowest
+    - php: 5.6
+      env: dependencies=lowest
+    - php: 7
+      env: dependencies=lowest
+    - php: hhvm
+      env: dependencies=lowest
+    - php: 5.5
+      env: dependencies=highest
+    - php: 5.6
+      env: dependencies=highest
+    - php: 7
+      env: dependencies=highest
+    - php: hhvm
+      env: dependencies=highest
 
+## Update composer and run the appropriate composer command
 before_script:
-  - composer self-update
-  - composer install
+  - composer self-update -q
+  - if [ -n "$GH_TOKEN" ]; then composer config github-oauth.github.com ${GH_TOKEN}; fi;
+  - if [ -z "$dependencies" ]; then composer install; fi;
+  - if [ "$dependencies" = "lowest" ]; then composer update --prefer-lowest -n; fi;
+  - if [ "$dependencies" = "highest" ]; then composer update -n; fi;
+  - composer show -i
 
+## Run the actual test
 script: make travis
 
-after_script: sh -c " if [ -f ./build/logs/clover.xml ]; then php vendor/bin/coveralls; fi"
+## Send coverage report to scrutinizer
+after_script: make travis-coverage
