--- a/composer.json
+++ b/composer.json
@@ -15,10 +15,9 @@
         "aws/aws-sdk-php": "~2.7",
         "chrisboulton/php-resque": "~1.2",
         "react/promise": "^2.2",
-        "zikarsky/react-gearman": "0.1.*",
         "jms/metadata": "~1.5",
-        "react/stomp": "dev-master",
-        "clue/redis-react": "^0.5.1"
+        "clue/redis-react": "^0.5.1",
+        "bunny/bunny": "^0.2.3"
     },
     "require-dev": {
         "satooshi/php-coveralls": "^0.6",
